--- a/frontend/src/app/components/resourcetypes/components/admin-resource-type/admin-resource-type.component.html
+++ b/frontend/src/app/components/resourcetypes/components/admin-resource-type/admin-resource-type.component.html
@@ -2,20 +2,26 @@
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
 <div class="card">
-    <p-toolbar styleClass="mb-4 gap-2">
-        <ng-template pTemplate="left">
-            <button pButton pRipple label="Nuevo Tipo" icon="pi pi-plus" class="p-button-success" (click)="openNew()"></button>
-        </ng-template>
-    </p-toolbar>
+    <p-table #dt [value]="resourceTypes" [rows]="10" [paginator]="true" responsiveLayout="scroll" [globalFilterFields]="['name','description']">
 
-    <p-table [value]="resourceTypes" [rows]="10" [paginator]="true" responsiveLayout="scroll">
+        <ng-template pTemplate="caption">
+            <div class="flex flex-wrap gap-2 align-items-center justify-content-between">
+                <span class="p-input-icon-left">
+                    <i class="pi pi-search"></i>
+                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Buscar tipo..." />
+                </span>
+                <button pButton pRipple label="Nuevo Tipo" icon="pi pi-plus" class="p-button-outlined w-full sm:w-auto flex-order-0 sm:flex-order-1" (click)="openNew()"></button>
+            </div>
+        </ng-template>
+
         <ng-template pTemplate="header">
             <tr>
                 <th pSortableColumn="name">Nombre <p-sortIcon field="name"></p-sortIcon></th>
-                <th>Descripción</th>
+                <th pSortableColumn="description">Descripción <p-sortIcon field="description"></p-sortIcon></th>
                 <th style="width: 8rem">Acciones</th>
             </tr>
         </ng-template>
+
         <ng-template pTemplate="body" let-rt>
             <tr>
                 <td>{{rt.name}}</td>
@@ -26,6 +32,7 @@
                 </td>
             </tr>
         </ng-template>
+
         <ng-template pTemplate="emptymessage">
             <tr>
                 <td colspan="3">No se encontraron tipos de recurso.</td>
