--- a/frontend/src/app/components/bookings/components/booking-wizard/booking-wizard.component.scss
+++ b/frontend/src/app/components/bookings/components/booking-wizard/booking-wizard.component.scss
@@ -1,155 +1,143 @@
-.p-stepper {
-    background: red;
+:host ::ng-deep .p-stepper {
+    .p-stepper-nav {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        overflow-x: auto;
+    }
+
+    &.p-stepper-vertical {
+        display: flex;
+        flex-direction: column;
+
+        .p-stepper-nav {
+            flex-direction: column;
+        }
+    }
+
+    .p-stepper-title {
+        display: block;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 100%;
+    }
+
+    .p-stepper-number {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .p-stepper-separator {
+        flex: 1 1 0;
+        background-color: #e2e8f0;
+        width: 100%;
+        height: 2px;
+        margin-inline-start: 1rem;
+        transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s, outline-color 0.2s;
+    }
+
+    .p-stepper-header {
+        position: relative;
+        display: flex;
+        flex: 1 1 auto;
+        align-items: center;
+        padding: 0.5rem;
+
+        &:last-of-type {
+            flex: initial;
+        }
+
+        &.p-highlight {
+            .p-stepper-action {
+                cursor: default;
+            }
+
+            .p-stepper-number {
+                background: #EFF6FF;
+                color: #1D4ED8;
+            }
+
+            .p-stepper-title {
+                color: #334155;
+            }
+        }
+
+        .p-stepper-action {
+            border: 0 none;
+            display: inline-flex;
+            align-items: center;
+            text-decoration: none;
+            cursor: pointer;
+
+            transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s, outline-color 0.2s;
+            border-radius: 6px;
+            background: #ffffff;
+            outline-color: transparent;
+
+            &:focus-visible {
+                outline: 1px solid var(--p-focus-ring-color);
+                outline-offset: 2px;
+                box-shadow: none;
+            }
+
+            .p-stepper-number {
+                color: #64748b;
+                border: 1px solid #e2e8f0;
+                border-width: 2px;
+                background: #ffffff;
+                min-width: 2rem;
+                height: 2rem;
+                line-height: 2rem;
+                font-size: 1.143rem;
+                border-radius: 50%;
+                transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s, outline-color 0.2s;
+            }
+
+            .p-stepper-title {
+                margin-left: 0.5rem;
+                color: #334155;
+                font-weight: 500;
+                transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s, outline-color 0.2s;
+            }
+
+            &:not(.p-disabled):focus-visible {
+                outline: 1px solid var(--p-focus-ring-color);
+                outline-offset: 2px;
+                box-shadow: none;
+            }
+        }
+
+        &:not(.p-disabled):focus-visible {
+            outline: 1px solid var(--p-focus-ring-color);
+            outline-offset: 2px;
+            box-shadow: none;
+        }
+
+        &:has(~ .p-highlight) .p-stepper-separator {
+            background-color: #3B82F6;
+        }
+    }
+
+    &.p-stepper-readonly {
+        .p-stepper-header {
+            cursor: auto;
+        }
+    }
+
+    .p-stepper-panels {
+        background: #ffffff;
+        padding: 0.875rem 1.125rem 1.125rem 1.125rem;
+        color: #334155;
+    }
+
 }
 
-.p-stepper .p-stepper-nav {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    overflow-x: auto;
-}
-
-.p-stepper-vertical .p-stepper-nav {
-    flex-direction: column;
-}
-
-.p-stepper-header {
-    position: relative;
-    display: flex;
-    flex: 1 1 auto;
-    align-items: center;
-}
-
-.p-stepper-header:last-of-type {
-    flex: initial;
-}
-
-.p-stepper-header .p-stepper-action {
-    border: 0 none;
-    display: inline-flex;
-    align-items: center;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.p-stepper-header .p-stepper-action:focus-visible {
-    outline: 1px solid var(--p-focus-ring-color);
-    outline-offset: 2px;
-    box-shadow: none;
-}
-
-.p-stepper.p-stepper-readonly .p-stepper-header {
-    cursor: auto;
-}
-
-.p-stepper-header.p-highlight .p-stepper-action {
-    cursor: default;
-}
-
-.p-stepper-title {
-    display: block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 100%;
-}
-
-.p-stepper-number {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.p-stepper-separator {
-    flex: 1 1 0;
-}
-
-.p-stepper .p-stepper-nav {
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-.p-stepper .p-stepper-header {
-    padding: 0.5rem;
-}
-
-.p-stepper .p-stepper-header .p-stepper-action {
-    transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s, outline-color 0.2s;
-    border-radius: 6px;
-    background: #ffffff;
-    outline-color: transparent;
-}
-
-.p-stepper .p-stepper-header .p-stepper-action .p-stepper-number {
-    color: #64748b;
-    border: 1px solid #e2e8f0;
-    border-width: 2px;
-    background: #ffffff;
-    min-width: 2rem;
-    height: 2rem;
-    line-height: 2rem;
-    font-size: 1.143rem;
-    border-radius: 50%;
-    transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s, outline-color 0.2s;
-}
-
-.p-stepper .p-stepper-header .p-stepper-action .p-stepper-title {
-    margin-left: 0.5rem;
-    color: #334155;
-    font-weight: 500;
-    transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s, outline-color 0.2s;
-}
-
-.p-stepper .p-stepper-header .p-stepper-action:not(.p-disabled):focus-visible {
-    outline: 1px solid var(--p-focus-ring-color);
-    outline-offset: 2px;
-    box-shadow: none;
-}
-
-.p-stepper .p-stepper-header.p-highlight .p-stepper-number {
-    background: #EFF6FF;
-    color: #1D4ED8;
-}
-
-.p-stepper .p-stepper-header.p-highlight .p-stepper-title {
-    color: #334155;
-}
-
-.p-stepper .p-stepper-header:not(.p-disabled):focus-visible {
-    outline: 1px solid var(--p-focus-ring-color);
-    outline-offset: 2px;
-    box-shadow: none;
-}
-
-.p-stepper .p-stepper-header:has(~ .p-highlight) .p-stepper-separator {
-    background-color: #3B82F6;
-}
-
-.p-stepper .p-stepper-panels {
-    background: #ffffff;
-    padding: 0.875rem 1.125rem 1.125rem 1.125rem;
-    color: #334155;
-}
-
-.p-stepper .p-stepper-separator {
-    background-color: #e2e8f0;
-    width: 100%;
-    height: 2px;
-    margin-inline-start: 1rem;
-    transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s, outline-color 0.2s;
-}
-
-.p-stepper.p-stepper-vertical {
-    display: flex;
-    flex-direction: column;
-}
 
 .p-stepper.p-stepper-vertical .p-stepper-toggleable-content {
     display: flex;
