--- a/frontend/src/app/components/resources/components/admin-resource/admin-resource.component.html
+++ b/frontend/src/app/components/resources/components/admin-resource/admin-resource.component.html
@@ -16,11 +16,11 @@
 
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="name"><i class="pi pi-tag mr-2"></i>Nombre <p-sortIcon field="name"></p-sortIcon></th>
-                <th pSortableColumn="type.name"><i class="pi pi-list mr-2"></i>Tipo <p-sortIcon field="type.name"></p-sortIcon></th>
-                <th pSortableColumn="capacity"><i class="pi pi-users mr-2"></i>Capacidad <p-sortIcon field="capacity"></p-sortIcon></th>
-                <th><i class="pi pi-star mr-2"></i>Amenidades</th>
-                <th pSortableColumn="isActive"><i class="pi pi-check-circle mr-2"></i>Estado <p-sortIcon field="isActive"></p-sortIcon></th>
+                <th pSortableColumn="name"><i class="pi pi-tag mr-2 text-primary"></i>Nombre <p-sortIcon field="name"></p-sortIcon></th>
+                <th pSortableColumn="type.name"><i class="pi pi-list mr-2 text-primary"></i>Tipo <p-sortIcon field="type.name"></p-sortIcon></th>
+                <th pSortableColumn="capacity"><i class="pi pi-users mr-2 text-primary"></i>Capacidad <p-sortIcon field="capacity"></p-sortIcon></th>
+                <th><i class="pi pi-star mr-2 text-primary"></i>Amenidades</th>
+                <th pSortableColumn="isActive"><i class="pi pi-check-circle mr-2 text-primary"></i>Estado <p-sortIcon field="isActive"></p-sortIcon></th>
                 <th style="width: 8rem">Acciones</th>
             </tr>
         </ng-template>
@@ -50,35 +50,23 @@
 <p-dialog [(visible)]="resourceDialog" [style]="{width: '500px'}" header="Detalles del Recurso" [modal]="true" class="p-fluid">
     <ng-template pTemplate="content">
         <div class="field">
-            <label for="name">Nombre del Recurso</label>
-            <div class="p-inputgroup">
-                <span class="p-inputgroup-addon"><i class="pi pi-tag"></i></span>
-                <input type="text" pInputText id="name" [(ngModel)]="resource.name" required autofocus placeholder="Ej. Sala de Juntas A" />
-            </div>
+            <label for="name"><i class="pi pi-tag mr-2 text-primary"></i>Nombre del Recurso</label>
+            <input type="text" pInputText id="name" [(ngModel)]="resource.name" required autofocus placeholder="Ej. Sala de Juntas A" />
         </div>
         <div class="field">
-            <label for="type">Tipo</label>
-            <div class="p-inputgroup">
-                <span class="p-inputgroup-addon"><i class="pi pi-list"></i></span>
-                <p-dropdown id="type" [options]="resourceTypes" [(ngModel)]="resource.type" placeholder="Selecciona un tipo" appendTo="body"></p-dropdown>
-            </div>
+            <label for="type"><i class="pi pi-list mr-2 text-primary"></i>Tipo</label>
+            <p-dropdown id="type" [options]="resourceTypes" [(ngModel)]="resource.type" placeholder="Selecciona un tipo" appendTo="body"></p-dropdown>
         </div>
         <div class="field">
-            <label for="capacity">Capacidad</label>
-            <div class="p-inputgroup">
-                <span class="p-inputgroup-addon"><i class="pi pi-users"></i></span>
-                <p-inputNumber id="capacity" [(ngModel)]="resource.capacity" [min]="1" placeholder="Ej. 4"></p-inputNumber>
-            </div>
+            <label for="capacity"><i class="pi pi-users mr-2 text-primary"></i>Capacidad</label>
+            <p-inputNumber id="capacity" [(ngModel)]="resource.capacity" [min]="1" placeholder="Ej. 4"></p-inputNumber>
         </div>
         <div class="field">
-            <label for="description">Descripción</label>
-            <div class="p-inputgroup">
-                <span class="p-inputgroup-addon"><i class="pi pi-align-left"></i></span>
-                <textarea id="description" pInputTextarea [(ngModel)]="resource.description" rows="3" placeholder="Breve descripción del espacio..."></textarea>
-            </div>
+            <label for="description"><i class="pi pi-align-left mr-2 text-primary"></i>Descripción</label>
+            <textarea id="description" pInputTextarea [(ngModel)]="resource.description" rows="3" placeholder="Breve descripción del espacio..."></textarea>
         </div>
         <div class="field">
-            <label for="amenities">Amenidades del Recurso</label>
+            <label for="amenities"><i class="pi pi-star mr-2 text-primary"></i>Amenidades del Recurso</label>
             <p-chips id="amenities" [(ngModel)]="resource.amenities" separator="," placeholder="Ej. Wifi, Proyector, Café"></p-chips>
         </div>
     </ng-template>
